// Copyright (C) 2018 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
package nodereputation;

service NodeReputation {
    rpc UpdateReputation(NodeUpdate) returns (UpdateReply) {}
    rpc QueryAggregatedNodeInfo(NodeQuery) returns (NodeReputationRecord) {}
}

message NodeReputationRecord {
    string source = 1;
    string nodeName = 2;
	string timestamp = 3;
	int64 uptime = 4;
	int64 auditSuccess = 5;
	int64 auditFail = 6;
	int64 latency = 7;
	int64 amountOfDataStored = 8;
	int64 falseClaims = 9;
	int64 shardsModified = 10;
}

message UpdateReply {
    string bridgeName = 1;
    string nodeName = 2;
    string source = 3;

    enum ReplyType {
        UPDATE_SUCCESS = 0;
        UPDATE_FAILED = 1;
    }

    ReplyType status = 4;
}

message NodeQuery {
    string source = 1;
    string nodeName = 2;
}

message NodeUpdate {
    string source = 1;
    string nodeName = 2;
    string columnName = 3;
    string columnValue = 4;
}